# Bachelor_Doku

./: README.md
Benchmark/: benchmark_suite_1.py  benchmark_suite_2.py  benchmark_suite_3.py  plot_benchmark_suite.py  validate_responses.py  validate_scanner.py
Benchmark/Binaries/: mock_program_afp_1  mock_program_afp_2  mock_program_afp_3  mock_program_afp_poc  mock_program_afp_poc_r  mock_program_c_1  mock_program_c_2  mock_program_c_3  mock_program_c_poc  mock_program_c_poc_r  mock_program_g_1  mock_program_g_2  mock_program_g_3  mock_program_g_poc  mock_program_g_por_r  mock_program_zc_1  mock_program_zc_2  mock_program_zc_3  mock_program_zc_poc  mock_program_zc_poc_r
Benchmark/messdaten/: logs_benchmark_suite.txt  logs_dummy_receiver.txt
Benchmark/messdaten/Evaluationsszenario_1/: ethtool_ergebnisse.csv  validierung_hits.csv  zusammenfassung_ergebnisse_final.csv
Benchmark/messdaten/Evaluationsszenario_2/: ethtool_ergebnisse.csv  validierung_hits.csv  zusammenfassung_ergebnisse_final.csv
Benchmark/messdaten/Evaluationstest_1/: validation_summary.csv  validierung_hits.csv
Benchmark/messdaten/Evaluationstest_1/SYN-Rust (AF_PACKET)/run_1/: baseline.csv  ethtool_end.txt  ethtool_start.txt  metrics.csv  scan_output.csv
Benchmark/messdaten/Evaluationstest_1/SYN-Rust (AF_PACKET)/run_2/: baseline.csv  ethtool_end.txt  ethtool_start.txt  metrics.csv  scan_output.csv
Benchmark/messdaten/Evaluationstest_1/SYN-Rust (AF_PACKET)/run_3/: baseline.csv  ethtool_end.txt  ethtool_start.txt  metrics.csv  scan_output.csv
Benchmark/messdaten/Evaluationstest_1/SYN-Rust (AF_PACKET)/run_4/: baseline.csv  ethtool_end.txt  ethtool_start.txt  metrics.csv  scan_output.csv
Benchmark/messdaten/Evaluationstest_1/SYN-Rust (AF_PACKET)/run_5/: baseline.csv  ethtool_end.txt  ethtool_start.txt  metrics.csv  scan_output.csv
Benchmark/messdaten/Evaluationstest_1/SYN-Rust (XDP, Copy)/run_1/: baseline.csv  ethtool_end.txt  ethtool_start.txt  metrics.csv
Benchmark/messdaten/Evaluationstest_1/SYN-Rust (XDP, Copy)/run_2/: baseline.csv  ethtool_end.txt  ethtool_start.txt  (+2 more)
SYN-Rust/: .gitignore  Cargo.toml  README.md  setup_dependencies.sh
SYN-Rust/.github/: copilot-instructions.md
SYN-Rust/scanner/: Cargo.toml  build.rs
SYN-Rust/scanner/src/: main.rs
SYN-Rust/scanner/src/scan_utils/: mod.rs
SYN-Rust/scanner/src/scan_utils/capturing_packets/: bucket.rs  deduplicator.rs  mod.rs  receiver.rs
SYN-Rust/scanner/src/scan_utils/emitting_packets/: assembler.rs  mod.rs  rate_limiter.rs  sender.rs
SYN-Rust/scanner/src/scan_utils/job_controlling/: finish_broadcaster.rs  mod.rs  parser_std_in.rs  scan_job.rs
SYN-Rust/scanner/src/scan_utils/shared/: helper.rs  mod.rs  types_and_config.rs  unused_helper.rs
SYN-Rust/xdp-common/: Cargo.toml
SYN-Rust/xdp-common/src/: lib.rs
SYN-Rust/xdp-ebpf/: Cargo.toml
SYN-Rust/xdp-ebpf/src/: main.rs
(+61 files in other folders)
