[package]
name = "scanner"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
xdp-common = { path = "../xdp-common" }
etherparse = "0.19.0"
get_if_addrs = "0.5.3"
nix = {version = "0.30.1", features = ["socket", "net", "uio"] }
rand = "0.9.2"
num-integer = "0.1"
clap_derive = { version = "4.0.0-rc.1" }
dashmap = "6.1.0"
tokio = { version = "1.47.1", features = ["full"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
pnet = "0.35.0"
core_affinity = "0.8.3"
pcap = "2.3.0"
crossbeam = "0.8.4"
xdp-socket = { git = "https://github.com/F4c3hugg3r/xdp-rs", branch = "temp/alles-zusammen" }
# xdp-socket = "0.1.4"
thread-priority = "3.0.0"
ctrlc = { version = "3.5", features = ["termination"] }
ipnetwork = "0.21.1"
siphasher = { version = "1.0", default-features = false }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
# tokio = { workspace = true, features = [
#     "macros",
#     "rt",
#     "rt-multi-thread",
#     "net",
#     "signal",
# ] }
clap = { workspace = true, features = ["derive"] }
bytes = "1.11.0"
zerocopy = "0.8.31"
tikv-jemallocator = "0.6.1"
foldhash = "0.2.0"

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }

# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependecy so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
xdp-ebpf = { path = "../xdp-ebpf" }

[[bin]]
name = "scanner"
path = "src/main.rs"

